# doplr

./: Cargo.toml
ffmpeg-sys/: Cargo.toml
ffmpeg-sys/src/: bindings.rs
src/metadata/providers/: mod.rs
src/metadata/providers/musicbrainz/: client.rs  entities.rs  mod.rs
