[package]
name = "doplr"
version = "0.1.0"
authors = ["Jason Chen <jason@jcndrop.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-sys = { version = "0.0.1", path = "./ffmpeg-sys" }
reqwest = "0.10.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tokio = { version = "0.2", features = ["macros"] }
